# youbot_assignment

./: CMakeLists.txt  README.md  package.xml
config/: base_local_planner_params.yaml~  costmap_common_params.yaml~  local_costmap_params.yaml~  webcam_calibration.yaml  youbot_mapping.rviz
launch/: amcl.launch  amcl.launch~  gmapping.launch  joystick.launch  mapping_full.launch  mapping_full.launch~  marker_detection.launch  marker_detection.launch~  navigation.launch  navigation.launch~  navigation_full.launch  navigation_full.launch~  teach_points.launch  teach_points.launch~  xtion_laser.launch  youbot.launch  youbot_joint_state_publisher.launch
maps/: map_lab1.yaml  map_sim.yaml
